[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatscookin"
description = "Find recipes based on ingredients you have"
version = "0.1.0"
authors = [
  { name="Green Sea Turtle Team" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
whatscookin = "whatscookin.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whatscookin = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
